tests/check_output/snapshots/errors__check_output__main@provides_invalid_return_type.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error: #[*_provides] is supposed to be placed on an impl block containing a function returning `Self`
  --> examples/provides_invalid_return_type.rs:89:21
   |
89 |         fn new() -> Option<Self> {
   |                     ^^^^^^^^^^^^

error[E0432]: unresolved import `crate::logger::SingletonFactoryOption`
  --> examples/provides_invalid_return_type.rs:12:5
   |
12 | use crate::logger::SingletonFactoryOption;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `SingletonFactoryOption` in `logger`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `coffee` (example "provides_invalid_return_type") due to 2 previous errors
